# afb-monitoring

./: CHANGELOG  CMakeLists.txt  README.md
src/: AFB.js  AFB2.js  index.html  monitor-base.css  monitor-demo.css  monitor-pastel.css  monitor.html  monitor.js  monitor2.html  monitor2.js
